<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="textView1_text">Hello 1 world!</string>
    <string name="textView2_text">Hello 2 world!</string>
    <string name="textView3_text">Hello 3 world!</string>
    <string name="textView4_text">Hello 4 world!</string>
    <string name="textView5_text">Hello 5 world!</string>
    <string name="textView6_text">Hello 6 world!</string>
    <string name="textView7_text">Hello 7 world!</string>
    <string name="textView8_text">Hello 8 world!</string>
    <string name="textView9_text">Hello 9 world!</string>

    <string name="button1_text">Send1</string>
    <string name="button2_text">Send2</string>
    <string name="button3_text">Send3</string>
    <string name="button4_text">Send4</string>
    <string name="button5_text">Send5</string>
    <string name="button6_text">Send6</string>
    <string name="button7_text">Send7</string>
    <string name="button8_text">Send8</string>
    <string name="button9_text">Send9</string>

</resources>
